# set_transformerx

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: max_regression_demo.ipynb
src/set_transformerx/: model.py  models.py  modules.py
tests/test_set_transformerx/: test_model.py
