[tool.poetry]
name = "set-transformerx"
version = "0.1.0"
description = "Jax implementation of Set Transformer"
authors = ["Shao-Ting Chiu <stchiu@email.tamu.edu>"]
readme = "README.md"
packages = [
    {include = "set_transformerx", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
jax = {extras = ["cuda12"], version = "^0.5.3"}
equinox = "^0.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipykernel = "^6.29.5"
optax = "^0.2.4"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
pythonpath = [
  "src"
]